src/index.css
@font-face {
  font-family: "DaysOne";
  src: local("DaysOne"),
    url("/public/fonts/DaysOne-Regular.ttf") format("truetype");
}

@font-face {
  font-family: "DotGothic16";
  src: local("DotGothic16"),
    url("/public/fonts/DotGothic16-Regular.ttf") format("truetype");
}

@font-face {
  font-family: "OpenSans";
  font-weight: 400;
  src: local("OpenSans-Regular"),
    url("/public/fonts/OpenSans-Regular.ttf") format("truetype");
}

@font-face {
  font-family: "OpenSans";
  font-weight: 500;
  src: local("OpenSans-Medium"),
    url("/public/fonts/OpenSans-Medium.ttf") format("truetype");
}

@font-face {
  font-family: "OpenSans";
  font-weight: 600;
  src: local("OpenSans-SemiBold"),
    url("/public/fonts/OpenSans-SemiBold.ttf") format("truetype");
}

@font-face {
  font-family: "OpenSans";
  font-weight: 700;
  src: local("OpenSans-Bold"),
    url("/public/fonts/OpenSans-Bold.ttf") format("truetype");
}

@font-face {
  font-family: "OpenSans";
  font-weight: 800;
  src: local("OpenSans-ExtraBold"),
    url("/public/fonts/OpenSans-ExtraBold.ttf") format("truetype");
}

@font-face {
  font-family: "BioRhyme";
  font-weight: 400;
  src: local("BioRhym-Regular"),
    url("/public/fonts/BioRhyme-Regular.ttf") format("truetype");
}

@font-face {
  font-family: "BioRhyme";
  font-weight: 400;
  src: local("BioRhym-Regular"),
    url("/public/fonts/BioRhyme-Regular.ttf") format("truetype");
}

@font-face {
  font-family: "BioRhyme";
  font-weight: 400;
  src: local("BioRhym-Regular"),
    url("/public/fonts/BioRhyme-Regular.ttf") format("truetype");
}

body {
  color: white;
  background-color: black;
  margin: 0;
  height: 100%;
  width: 100%;
}

html {
  height: 100%;
  width: 100%;
}

#root {
  height: 100%;
  width: 100%;
}

